# BlockEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  clangd
.github/workflows/: documentation-gen.yml  platform-test.yml
bgfx/: BasePart.html  Color3.html  DataModel.html  Lighting.html  LuaTask.html  ModuleScript.html  Part.html  PartType.html  ServiceProvider.html  ShaderType.html  Vector3.html  Workspace.html  index.html  style.css
develop/: BasePart.html  DataModel.html  Instance.html  Lighting.html  LuaSourceContainer.html  ModuleScript.html  Object.html  Part.html  ServiceProvider.html  SleepingTask.html  Vector3.html  index.html
lua/: test.luau  test_runner.luau
lua/tests/: enum.luau  parts.luau  services.luau
main/: Color3.html  Instance.html  LuaSourceContainer.html  LuaTask.html  Script.html  ServiceProvider.html  SleepingTask.html  Workspace.html  index.html
scripts/documentation/: doc_tool.py  guide.md
scripts/documentation/templates/: class.html  datatype.html  enum.html  index.html
src/: Global.cpp  Global.h  main.cpp
src/core/: Application.h  Camera.h  Config.h  Constants.h  EnumRegistry.cpp  EnumRegistry.h  LuaBindings.cpp  LuaBindings.h  LuaClassBinder.cpp  LuaClassBinder.h  Model.h  PlaceFormat.h  PrimitiveModels.cpp  PrimitiveModels.h  PropertyMap.h  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h  Signal.cpp  Signal.h  SkyboxRenderer.cpp  SkyboxRenderer.h  Texture2D.h  Vertex.h
src/datatypes/: Color3.cpp  Color3.h  Instance.cpp  Instance.h  Task.cpp  Task.h  Vector3.cpp  Vector3.h
src/editor/: EditorApplication.h  main.cpp
src/enums/: PartType.cpp  PartType.h
src/instances/: BasePart.cpp  BasePart.h  DataModel.cpp  DataModel.h  Instance.cpp  Instance.h  LuaSourceContainer.cpp  LuaSourceContainer.h  ModuleScript.cpp  ModuleScript.h  Object.cpp  Object.h  Part.cpp  Part.h  Script.cpp  Script.h  ServiceProvider.cpp  ServiceProvider.h  Workspace.cpp  Workspace.h
src/instances/services/: Lighting.cpp  Lighting.h  ServiceProvider.cpp  ServiceProvider.h  Workspace.cpp  Workspace.h
src/runtime/: RuntimeApplication.h  main.cpp
src/shaders/: main_fs.sc  main_vs.sc  shadow.fs  shadow.vs  varying.def.sc
